[project]
name = "kb-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.7",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "pypdf>=5.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "psycopg[binary]>=3.2.9",
    "unstructured>=0.17.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "pydantic[email]>=2.11.4",
    "docx2txt>=0.9",
    "dialdesk-ai-platform-core",
]

[tool.uv.sources]
dialdesk-ai-platform-core = { git = "https://github.com/arisodev/dialdesk-ai-platform-core.git", rev = "bugfix/qdrant_store" }
